<resources>
    <string name="app_name">Contacts Manager</string>
    <string name="address">Address</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="show_additional_fields">SHOW ADDITIONAL FIELDS</string>
    <string name="save">SAVE</string>
    <string name="cancel">CANCEL</string>
    <string name="job_title">Job Title</string>
    <string name="company">Company</string>
    <string name="website">Website</string>
    <string name="im">IM</string>
</resources>